Improve corrected text for Hans

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           version: "Noble crapule",
           image: "images/004_146.jpg",
           incorrectText: "<mark>Si vous avez un personnage Princesse ou Reine en jeu</mark> lorsque vous jouez ce personnage, gagnez 1 éclat de Lore.",
-          correctedText: "Lorsque vous jouez ce personnage, <mark>s’il y a un personnage Princesse ou Reine en jeu</mark>, gagnez 1 éclat de Lore.",
+          correctedText: "<mark>S’il y a un personnage Princesse ou Reine en jeu</mark> lorsque vous jouez ce personnage, gagnez 1 éclat de Lore.",
           officialCorrection: "Aucune",
           number: "146/204 · FR · 4",
         },
