Add Maui's Place of Exil

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">37</span>/37 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">38</span>/38 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">37</span>/37 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">38</span>/38 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -507,6 +507,17 @@
           correctedText: "<mark>Lorsqu’un adversaire défie l’un de vos personnages, il doit</mark>, si possible, choisir l’un de vos personnages avec Rempart.",
           officialCorrection: "Corrigé sur l’application",
           number: "179/204 · FR · 3",
+        },
+        {
+          filters: "set3 acier capacite impact-non correction-aucune",
+          name: "Île d’exil de Maui",
+          version: "Rocher caché",
+          sorting: "Ile d’exil de Maui - Rocher cache",
+          image: "", // TODO(add-image)
+          incorrectText: "Les personnages sur ce lieu <mark>gagne</mark> Résistance +1.",
+          correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
+          officialCorrection: "Aucune",
+          number: "202/204 · FR · 3",
         },
         {
           filters: "set4 rubis capacite impact-oui correction-aucune",
