Add set 5 to filters

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set3">Les Terres d’Encres</label>
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set4" data-filter=".set4">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set4">Le retour d’Ursula</label>
+              <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set5" data-filter=".set5">
+              <label class="btn btn-outline-dark text-nowrap" for="btn-check-set5">Ciel Scintillant</label>
             </div>
             <h6>Correction officielle</h6>
             <div class="d-flex flex-wrap gap-2 mb-4 button-group">
