Add Madam Mim - Elephant

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">38</span>/38 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">39</span>/39 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">38</span>/38 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">39</span>/39 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -542,6 +542,17 @@
           correctedText: "<mark>S’il y a un personnage Princesse ou Reine en jeu</mark> lorsque vous jouez ce personnage, gagnez 1 éclat de Lore.",
           officialCorrection: "Aucune",
           number: "146/204 · FR · 4",
+        },
+        {
+          filters: "set5 amethyste capacite impact-oui correction-aucune",
+          name: "Madame Mime",
+          version: "En éléphante",
+          sorting: "Madame Mime - En elephante",
+          image: "", // TODO(add-image)
+          incorrectText: "Au début de votre tour, vous pouvez déplacer jusqu’à 2 dommages de ce personnage <mark>vers un personnage adverse</mark>.",
+          correctedText: "Au début de votre tour, vous pouvez déplacer jusqu’à 2 dommages de ce personnage <mark>sur un personnage adverse de votre choix</mark>.",
+          officialCorrection: "Aucune",
+          number: "44/204 · FR · 5",
         },
       ];
 
