--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">39</span>/39 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">40</span>/40 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">39</span>/39 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">40</span>/40 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -553,6 +553,17 @@
           correctedText: "Au début de votre tour, vous pouvez déplacer jusqu’à 2 dommages de ce personnage <mark>sur un personnage adverse de votre choix</mark>.",
           officialCorrection: "Aucune",
           number: "44/204 · FR · 5",
+        },
+        {
+          filters: "set5 amethyste capacite impact-oui correction-aucune",
+          name: "Palais de Glace d’Elsa",
+          version: "Forteresse de solitude",
+          sorting: "Palais de Glace d’Elsa - Forteresse de solitude",
+          image: "", // TODO(add-image)
+          incorrectText: "Lorsque vous jouez ce lieu, choisissez un personnage <mark>adverse</mark> épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
+          correctedText: "Lorsque vous jouez ce lieu, choisissez un personnage épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
+          officialCorrection: "Aucune",
+          number: "67/204 · FR · 5",
         },
       ];
 
