Add Ed - Laughing Hyena

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">40</span>/40 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">41</span>/41 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">40</span>/40 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">41</span>/41 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -564,6 +564,17 @@
           correctedText: "Lorsque vous jouez ce lieu, choisissez un personnage épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
           officialCorrection: "Aucune",
           number: "67/204 · FR · 5",
+        },
+        {
+          filters: "set5 emeraude capacite impact-oui correction-aucune",
+          name: "Ed",
+          version: "Hyène rieuse",
+          sorting: "Ed - Hyene rieuse",
+          image: "", // TODO(add-image)
+          incorrectText: "Lorsque vous jouez ce personnage, <mark>choisissez</mark> un personnage ayant au moins un dommage sur lui et <mark>infligez-lui</mark> 2 dommages.",
+          correctedText: "Lorsque vous jouez ce personnage, <mark>vous pouvez choisir</mark> un personnage ayant au moins un dommage sur lui et <mark>lui infliger</mark> 2 dommages.",
+          officialCorrection: "Aucune",
+          number: "74/204 · FR · 5",
         },
       ];
 
