--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">41</span>/41 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">42</span>/42 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">41</span>/41 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">42</span>/42 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -520,6 +520,17 @@
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
           officialCorrection: "Aucune",
           number: "202/204 · FR · 3",
+        },
+        {
+          filters: "set4 emeraude capacite impact-oui correction-aucune",
+          name: "Zeus",
+          version: "M. Crache-la-Foudre",
+          sorting: "Zeus - M. Crache-la-Foudre",
+          image: "", // TODO(add-image)
+          incorrectText: "Chaque fois que ce personnage en défie un autre, choisissez un personnage et ajoutez sa <img style=\"width: 1em;\" src=\"images/S.svg\" /> à celle de ce personnage-ci.",
+          correctedText: "Chaque fois que ce personnage en défie un autre, choisissez un personnage et ajoutez sa <img style=\"width: 1em;\" src=\"images/S.svg\" /> à celle de ce personnage-ci <mark>pour le reste de ce tour</mark>.",
+          officialCorrection: "Aucune",
+          number: "92/204 · FR · 4",
         },
         {
           filters: "set4 rubis capacite impact-oui correction-aucune",
