Fix layout of card headers

--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 
         let cardSorting = document.createElement("span");
         cardHeaderLeft.appendChild(cardSorting);
-        cardSorting.setAttribute("class", "invisible sorting");
+        cardSorting.setAttribute("class", "d-none sorting");
         cardSorting.appendChild(document.createTextNode(card.sorting));
 
         let cardHeaderRight = document.createElement("div");
