Fix The Huntsman - Reluctant Enforcer

--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
           number: "189/204 · FR · 2",
         },
         {
-          filters: "set2 acier capacite impact-non correction-application correction-reimpression",
+          filters: "set2 acier capacite impact-non correction-reimpression",
           name: "Le chasseur",
           version: "Homme de main réticent",
           sorting: "Le chasseur - Homme de main reticent",
           image: "images/002_194.jpg",
-          incorrectText: "Lorsque ce personnage est envoyé à l’aventure, vous pouvez <mark>piochez</mark> une carte puis en <mark>défaussez</mark> une.",
-          correctedText: "Lorsque ce personnage est envoyé à l’aventure, vous pouvez <mark>piocher</mark> une carte puis en <mark>défausser</mark> une.",
-          officialCorrection: "Corrigé partiellement (uniquement \"piocher\") sur l’application et lors de la réimpression",
+          incorrectText: "Lorsque ce personnage est envoyé à l’aventure, vous pouvez piocher une carte puis en <mark>défaussez</mark> une.",
+          correctedText: "Lorsque ce personnage est envoyé à l’aventure, vous pouvez piocher une carte puis en <mark>défausser</mark> une.",
+          officialCorrection: "Corrigé lors de la réimpression",
           number: "194/204 · FR · 2",
         },
         {
