Add missing images

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
           name: "Île d’exil de Maui",
           version: "Rocher caché",
           sorting: "Ile d’exil de Maui - Rocher cache",
-          image: "", // TODO(add-image)
+          image: "images/003_202.jpg",
           incorrectText: "Les personnages sur ce lieu <mark>gagne</mark> Résistance +1.",
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
           officialCorrection: "Aucune",
@@ -526,7 +526,7 @@
           name: "Zeus",
           version: "M. Crache-la-Foudre",
           sorting: "Zeus - M. Crache-la-Foudre",
-          image: "", // TODO(add-image)
+          image: "images/004_092.jpg",
           incorrectText: "Chaque fois que ce personnage en défie un autre, choisissez un personnage et ajoutez sa <img style=\"width: 1em;\" src=\"images/S.svg\" /> à celle de ce personnage-ci.",
           correctedText: "Chaque fois que ce personnage en défie un autre, choisissez un personnage et ajoutez sa <img style=\"width: 1em;\" src=\"images/S.svg\" /> à celle de ce personnage-ci <mark>pour le reste de ce tour</mark>.",
           officialCorrection: "Aucune",
@@ -559,7 +559,7 @@
           name: "Madame Mime",
           version: "En éléphante",
           sorting: "Madame Mime - En elephante",
-          image: "", // TODO(add-image)
+          image: "images/005_044.jpg",
           incorrectText: "Au début de votre tour, vous pouvez déplacer jusqu’à 2 dommages de ce personnage <mark>vers un personnage adverse</mark>.",
           correctedText: "Au début de votre tour, vous pouvez déplacer jusqu’à 2 dommages de ce personnage <mark>sur un personnage adverse de votre choix</mark>.",
           officialCorrection: "Aucune",
@@ -570,7 +570,7 @@
           name: "Palais de Glace d’Elsa",
           version: "Forteresse de solitude",
           sorting: "Palais de Glace d’Elsa - Forteresse de solitude",
-          image: "", // TODO(add-image)
+          image: "images/005_067.jpg",
           incorrectText: "Lorsque vous jouez ce lieu, choisissez un personnage <mark>adverse</mark> épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
           correctedText: "Lorsque vous jouez ce lieu, choisissez un personnage épuisé. Tant que ce lieu est en jeu, ce personnage ne se redresse pas au début de chacun des tours de son propriétaire.",
           officialCorrection: "Aucune",
@@ -581,7 +581,7 @@
           name: "Ed",
           version: "Hyène rieuse",
           sorting: "Ed - Hyene rieuse",
-          image: "", // TODO(add-image)
+          image: "images/005_074.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, <mark>choisissez</mark> un personnage ayant au moins un dommage sur lui et <mark>infligez-lui</mark> 2 dommages.",
           correctedText: "Lorsque vous jouez ce personnage, <mark>vous pouvez choisir</mark> un personnage ayant au moins un dommage sur lui et <mark>lui infliger</mark> 2 dommages.",
           officialCorrection: "Aucune",
