Add Isabela Madrigal - Golden Child

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">42</span>/42 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">43</span>/43 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">42</span>/42 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">43</span>/43 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -520,6 +520,17 @@
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
           officialCorrection: "Aucune",
           number: "202/204 · FR · 3",
+        },
+        {
+          filters: "set4 amethyste capacite impact-non correction-aucune",
+          name: "Isabela Madrigal",
+          version: "Enfant chérie",
+          sorting: "Isabela Madrigal - Enfant cherie",
+          image: "images/004_045.jpg",
+          incorrectText: "Tant qu’aucun autre personnage n'a été envoyé à l'aventure <mark>durant ce tour</mark>, ce personnage gagne +3.",
+          correctedText: "<mark>Durant votre tour</mark>, tant qu’aucun autre personnage n'a été envoyé à l'aventure <mark>ce tour-ci</mark>, ce personnage gagne +3.",
+          officialCorrection: "Aucune",
+          number: "45/204 · FR · 4",
         },
         {
           filters: "set4 emeraude capacite impact-oui correction-aucune",
