Add Camilo Madrigal - Prankster

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">43</span>/43 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">44</span>/44 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">43</span>/43 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">44</span>/44 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -520,6 +520,17 @@
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
           officialCorrection: "Aucune",
           number: "202/204 · FR · 3",
+        },
+        {
+          filters: "set4 amethyste capacite impact-non correction-aucune",
+          name: "Camilo Madrigal",
+          version: "Farceur",
+          sorting: "Camilo Madrigal - Farceur",
+          image: "images/004_040.jpg",
+          incorrectText: "Au début de votre tour, <mark>choisissez</mark> entre:<br /> • Ce personnage gagne +1 <img style=\"width: 1em;\" src=\"images/L.svg\" /> pour le reste de ce tour.<br /> • Ce personnage gagne Offensif +2 pour le reste de ce tour.",
+          correctedText: "Au début de votre tour, <mark>vous pouvez choisir</mark> entre:<br /> • Ce personnage gagne +1 <img style=\"width: 1em;\" src=\"images/L.svg\" /> pour le reste de ce tour.<br /> • Ce personnage gagne Offensif +2 pour le reste de ce tour.",
+          officialCorrection: "Aucune",
+          number: "40/204 · FR · 4",
         },
         {
           filters: "set4 amethyste capacite impact-non correction-aucune",
