Update official correction for 5 cards

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
           number: "95/204 · FR · 1",
         },
         {
-          filters: "set1 rubis classification impact-non correction-reimpression",
+          filters: "set1 rubis classification impact-non correction-application correction-reimpression",
           name: "Raiponce",
           version: "Lançant sa chevelure",
           sorting: "Raiponce - Lancant sa chevelure",
           image: "images/001_121.jpg",
           incorrectText: "Storyborn",
           correctedText: "Dreamborn",
-          officialCorrection: "Corrigé lors de la réimpression",
+          officialCorrection: "Corrigé sur l’application et lors de la réimpression",
           number: "121/204 · FR · 1",
         },
         {
@@ -445,14 +445,14 @@
           number: "17/204 · FR · 3",
         },
         {
-          filters: "set3 emeraude capacite impact-oui correction-aucune",
+          filters: "set3 emeraude capacite impact-oui correction-application",
           name: "Frère Tuck",
           version: "Prêtre de Nottingham",
           sorting: "Frere Tuck - Pretre de Nottingham",
           image: "images/003_073.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, <mark>l’adversaire ou les adversaires</mark> ayant le plus de cartes en main choisissent une carte et la défaussent.",
           correctedText: "Lorsque vous jouez ce personnage, <mark>le joueur ou les joueurs</mark> ayant le plus de cartes en main choisissent une carte et la défaussent.",
-          officialCorrection: "Aucune",
+          officialCorrection: "Corrigé sur l’application",
           number: "73/204 · FR · 3",
         },
         {
@@ -478,14 +478,14 @@
           number: "121/204 · FR · 3",
         },
         {
-          filters: "set3 saphir rappel impact-oui correction-aucune",
+          filters: "set3 saphir rappel impact-oui correction-application",
           name: "Kit",
           version: "Copilote",
           sorting: "Kit - Copilote",
           image: "images/003_147.jpg",
           incorrectText: "Les adversaires ne peuvent pas <mark>défier</mark> ce personnage, hormis pour un défi.",
           correctedText: "Les adversaires ne peuvent pas <mark>choisir</mark> ce personnage, hormis pour un défi.",
-          officialCorrection: "Aucune",
+          officialCorrection: "Corrigé sur l’application",
           number: "147/204 · FR · 3",
         },
         {
@@ -511,14 +511,14 @@
           number: "179/204 · FR · 3",
         },
         {
-          filters: "set3 acier capacite impact-non correction-aucune",
+          filters: "set3 acier capacite impact-non correction-application",
           name: "Île d’exil de Maui",
           version: "Rocher caché",
           sorting: "Ile d’exil de Maui - Rocher cache",
           image: "images/003_202.jpg",
           incorrectText: "Les personnages sur ce lieu <mark>gagne</mark> Résistance +1.",
           correctedText: "Les personnages sur ce lieu <mark>gagnent</mark> Résistance +1.",
-          officialCorrection: "Aucune",
+          officialCorrection: "Corrigé sur l’application",
           number: "202/204 · FR · 3",
         },
         {
@@ -566,14 +566,14 @@
           number: "127/204 · FR · 4",
         },
         {
-          filters: "set4 saphir capacite impact-oui correction-aucune",
+          filters: "set4 saphir capacite impact-oui correction-application",
           name: "Hans",
           version: "Noble crapule",
           sorting: "Hans - Noble crapule",
           image: "images/004_146.jpg",
           incorrectText: "<mark>Si vous avez un personnage Princesse ou Reine en jeu</mark> lorsque vous jouez ce personnage, gagnez 1 éclat de Lore.",
           correctedText: "<mark>S’il y a un personnage Princesse ou Reine en jeu</mark> lorsque vous jouez ce personnage, gagnez 1 éclat de Lore.",
-          officialCorrection: "Aucune",
+          officialCorrection: "Corrigé sur l’application",
           number: "146/204 · FR · 4",
         },
         {
