Expand classification line

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
           version: "Lançant sa chevelure",
           sorting: "Raiponce - Lancant sa chevelure",
           image: "images/001_121.jpg",
-          incorrectText: "Storyborn",
-          correctedText: "Dreamborn",
+          incorrectText: "<mark>Storyborn</mark> · Héros · Princesse",
+          correctedText: "<mark>Dreamborn</mark> · Héros · Princesse",
           officialCorrection: "Corrigé sur l’application et lors de la réimpression",
           number: "121/204 · FR · 1",
         },
@@ -351,8 +351,8 @@
           version: "Unique en son genre",
           sorting: "Tigrou - Unique en son genre",
           image: "images/002_127.jpg",
-          incorrectText: "Tigre",
-          correctedText: "Tigrou",
+          incorrectText: "Dreamborn · <mark>Tigre</mark>",
+          correctedText: "Dreamborn · <mark>Tigrou</mark>",
           officialCorrection: "Corrigé sur l’application et lors de la réimpression",
           number: "127/204 · FR · 2",
         },
@@ -461,8 +461,8 @@
           version: "La plus perfide de toutes",
           sorting: "Ursula - La plus perfide de toutes",
           image: "images/003_091.jpg",
-          incorrectText: "Storyborn",
-          correctedText: "Dreamborn",
+          incorrectText: "<mark>Storyborn</mark> · Méchant · Mage",
+          correctedText: "<mark>Dreamborn</mark> · Méchant · Mage",
           officialCorrection: "Corrigé sur l’application",
           number: "91/204 · FR · 3",
         },
