Add Bibbidi Bobbidi Boo

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">44</span>/44 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">45</span>/45 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">44</span>/44 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">45</span>/45 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -322,6 +322,17 @@
           correctedText: "Lorsque ce <mark>personnage</mark> est défié, le propriétaire du personnage qui l’a défié défausse toute sa main.",
           officialCorrection: "Corrigé lors de la réimpression",
           number: "72/204 · FR · 2",
+        },
+        {
+          filters: "set2 emeraude effet impact-non correction-aucune",
+          name: "Bibbidi Bobbidi Boo",
+          version: "",
+          sorting: "Bibbidi Bobbidi Boo",
+          image: "images/002_096.jpg",
+          incorrectText: "Choisissez l'un de vos personnages et renvoyez-le dans votre main pour <mark>pouvoir</mark> jouer gratuitement un <mark>autre</mark> personnage coûtant autant ou moins.",
+          correctedText: "Choisissez l'un de vos personnages et renvoyez-le dans votre main pour jouer gratuitement un personnage coûtant autant ou moins.",
+          officialCorrection: "Aucune",
+          number: "96/204 · FR · 2",
         },
         {
           filters: "set2 emeraude effet impact-oui correction-aucune",
