Add Huey - Savvy Nephew

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">45</span>/45 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">46</span>/46 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">45</span>/45 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">46</span>/46 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -487,6 +487,17 @@
           correctedText: "Lorsque ce personnage est banni, <mark>vous pouvez choisir un personnage et le bannir</mark>.",
           officialCorrection: "Corrigé sur l’application",
           number: "121/204 · FR · 3",
+        },
+        {
+          filters: "set3 saphir classification impact-non correction-application",
+          name: "Riri",
+          version: "Neveu astucieux",
+          sorting: "Riri - Neveu astucieux",
+          image: "images/003_145.jpg",
+          incorrectText: "<mark>Storyborn</mark> · Allié",
+          correctedText: "<mark>Dreamborn</mark> · Allié",
+          officialCorrection: "Corrigé sur l’application",
+          number: "145/204 · FR · 3",
         },
         {
           filters: "set3 saphir rappel impact-oui correction-application",
