Add set 6 to filters

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set4">Le retour d’Ursula</label>
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set5" data-filter=".set5">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set5">Ciel Scintillant</label>
+              <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set6" data-filter=".set6">
+              <label class="btn btn-outline-dark text-nowrap" for="btn-check-set6">La Mer Azurite</label>
             </div>
             <h6>Correction officielle</h6>
             <div class="d-flex flex-wrap gap-2 mb-4 button-group">
