Add John Silver - Ferocious Friend

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">46</span>/46 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">47</span>/47 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">46</span>/46 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">47</span>/47 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -632,6 +632,17 @@
           correctedText: "Lorsque vous jouez ce personnage, <mark>vous pouvez choisir</mark> un personnage ayant au moins un dommage sur lui et <mark>lui infliger</mark> 2 dommages.",
           officialCorrection: "Aucune",
           number: "74/204 · FR · 5",
+        },
+        {
+          filters: "set6 rubis capacite impact-oui correction-aucune",
+          name: "John Silver",
+          version: "Ami féroce",
+          sorting: "John Silver - Ami feroce",
+          image: "images/006_109.jpg",
+          incorrectText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages. <mark>Infligez-lui 1 dommage et redressez-le.</mark> Ce personnage ne peut pas être envoyé à l'aventure pour le reste de ce tour.",
+          correctedText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages <mark>et lui infliger 1 dommage. Si vous le faites, redressez-le.</mark> Ce personnage ne peut pas être envoyé à l'aventure pour le reste de ce tour.",
+          officialCorrection: "Aucune",
+          number: "109/204 · FR · 6",
         },
       ];
 
