--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">47</span>/47 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">48</span>/48 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">47</span>/47 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">48</span>/48 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -643,6 +643,17 @@
           correctedText: "Chaque fois que ce personnage est envoyé à l'aventure, vous pouvez choisir un autre de vos personnages <mark>et lui infliger 1 dommage. Si vous le faites, redressez-le.</mark> Ce personnage ne peut pas être envoyé à l'aventure pour le reste de ce tour.",
           officialCorrection: "Aucune",
           number: "109/204 · FR · 6",
+        },
+        {
+          filters: "set6 saphir capacite impact-oui correction-aucune",
+          name: "Microrobots",
+          version: "",
+          sorting: "Microrobots",
+          image: "images/006_167.jpg",
+          incorrectText: "Lorsque vous jouez cet objet, choisissez un personnage qui subit -1 <img style=\"width: 1em;\" src=\"images/S.svg\" /> pour chaque Objet Microrobots que vous avez en jeu.",
+          correctedText: "Lorsque vous jouez cet objet, choisissez un personnage qui subit -1 <img style=\"width: 1em;\" src=\"images/S.svg\" /> <mark>pour le reste de ce tour</mark> pour chaque Objet Microrobots que vous avez en jeu.",
+          officialCorrection: "Aucune",
+          number: "167/204 · FR · 6",
         },
       ];
 
