Add Belle - Strange but Special

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">48</span>/48 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">49</span>/49 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">48</span>/48 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">49</span>/49 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -247,6 +247,17 @@
           correctedText: "<mark>Dreamborn</mark> · Héros · Princesse",
           officialCorrection: "Corrigé sur l’application et lors de la réimpression",
           number: "121/204 · FR · 1",
+        },
+        {
+          filters: "set1 saphir capacite impact-non correction-aucune",
+          name: "Belle",
+          version: "Étrange demoiselle",
+          sorting: "Belle - Etrange demoiselle",
+          image: "images/001_142.jpg",
+          incorrectText: "À chaque tour, vous pouvez placer une carte supplémentaire de votre main dans votre réserve d'encre.",
+          correctedText: "À chaque tour, vous pouvez placer une carte supplémentaire de votre main dans votre réserve d'encre<mark>, face cachée</mark>.",
+          officialCorrection: "Aucune",
+          number: "142/204 · FR · 1",
         },
         {
           filters: "set1 saphir rappel impact-non correction-application correction-reimpression",
