Add Queen of Hearts - Sensing Weakness

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           </span>
         </div>
         <div>
-          <span class="navbar-text me-2"><span class="num-filtered">49</span>/49 cartes</span>
+          <span class="navbar-text me-2"><span class="num-filtered">50</span>/50 cartes</span>
           <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span id="funnel-icon" class="bi-funnel"></span>
           </button>
         </div>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">49</span>/49 cartes)</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Filtres (<span class="num-filtered">50</span>/50 cartes)</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -368,6 +368,17 @@
           correctedText: "Là <mark>où</mark> un acolyte quelconque serait incapable de couper dans le vif.",
           officialCorrection: "Corrigé lors de la réimpression",
           number: "108/204 · FR · 2",
+        },
+        {
+          filters: "set2 rubis rappel impact-non correction-aucune",
+          name: "La Reine de Cœur",
+          version: "Utilise les faiblesses",
+          sorting: "La Reine de Coeur - Utilise les faiblesses",
+          image: "images/002_120.jpg",
+          incorrectText: "Vous pouvez payer 2 pour jouer ce personnage sur l'un de vos personnages <mark>Reine de Cœur</mark>.",
+          correctedText: "Vous pouvez payer 2 pour jouer ce personnage sur l'un de vos personnages <mark>La Reine de Cœur</mark>.",
+          officialCorrection: "Aucune",
+          number: "120/204 · FR · 2",
         },
         {
           filters: "set2 rubis classification impact-non correction-application correction-reimpression",
