Update official correction for Ed - Laughing Hyena

--- a/index.html
+++ b/index.html
@@ -645,14 +645,14 @@
           number: "67/204 · FR · 5",
         },
         {
-          filters: "set5 emeraude capacite impact-oui correction-aucune",
+          filters: "set5 emeraude capacite impact-oui correction-application",
           name: "Ed",
           version: "Hyène rieuse",
           sorting: "Ed - Hyene rieuse",
           image: "images/005_074.jpg",
           incorrectText: "Lorsque vous jouez ce personnage, <mark>choisissez</mark> un personnage ayant au moins un dommage sur lui et <mark>infligez-lui</mark> 2 dommages.",
           correctedText: "Lorsque vous jouez ce personnage, <mark>vous pouvez choisir</mark> un personnage ayant au moins un dommage sur lui et <mark>lui infliger</mark> 2 dommages.",
-          officialCorrection: "Aucune",
+          officialCorrection: "Corrigé sur l’application",
           number: "74/204 · FR · 5",
         },
         {
