--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set5">Ciel Scintillant</label>
               <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set6" data-filter=".set6">
               <label class="btn btn-outline-dark text-nowrap" for="btn-check-set6">La Mer Azurite</label>
+              <input type="checkbox" autocomplete="off" class="btn-check" id="btn-check-set7" data-filter=".set7">
+              <label class="btn btn-outline-dark text-nowrap" for="btn-check-set7">L'Île d'Archazia</label>
             </div>
             <h6>Correction officielle</h6>
             <div class="d-flex flex-wrap gap-2 mb-4 button-group">
